Many changes on sidebar, logic, ui, components

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
+
+* {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    font-feature-settings: "cv02", "cv03", "cv04", "cv11";
+}
 
 @plugin "tailwindcss-animate";
 @import "tw-animate-css";
